Fixed bool column generation and inheritance issues. Removed upwards inheritance and made sure downward inheritance actually works.
Made subclass counts compulsory.

Removed these things as either redundant, broken, or unnecessary:

1. 'no optimiser column'. All dimensions must have optimisers now.

2. concat columns. Headache to implement, probably doesn't work, and never used. Will re-implement in a better way if ever required by users.

3. 'optimiser column' option on expression columns. Unnecessary. You can just use a normal expression.

4. driver class locations for JDBC drivers. Unnecessary and confusing for users.

5. non-inherited columns. Entirely unnecessary and breaks everything!

If it all goes to pot then use PRE_AREK_PARTITION tag to revert changes. PartitionTable stuff and rehashing of existing schema/column/table partitioning will now happen for 0.7 instead, as will empty table pruning functions in MartRunner.